Slight change of name based on feedback

--- a/renderer.html
+++ b/renderer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Probe Sender</title>
+  <title>Probe Wrangler</title>
   <style>
     body { font-family: sans-serif; margin: 20px; }
     label { display: block; margin-top: 10px; }
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <h1>Probe Sender</h1>
+  <h1>Probe Wrangler</h1>
   <div class="horizontal">
     <button id="selectFileBtn">Load Excel File</button>
     <p id="selectedFile">No file loaded</p>
